html_pagina entera

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+   <script>window.confirm("bienvenido a Vidrios el sociego")</script>
    <header>
       <nav>
          <div>
@@ -29,7 +30,8 @@
             <li><a href="catalogo.html">Catalogo</a></li>
             <li><a href="ventas2.html">Ventas</a></li>
             <li><a href="servicios.html">Servicios</a></li>
-            <a href="iniciosesion.html" class="botton">Login</a>
+            <li><a href="iniciosesion.html">login</a></li>
+       
             
          </ul>
  
@@ -118,6 +120,9 @@
       </ul>
    </div>
 </section>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="js/sweetalert"></script>
+
 </body>
 
 
@@ -136,20 +141,20 @@
       <div class="footer-menus">
          <div class="footer-content-container">
             <span class="menu-title">menu</span>
-            <a href="" class="menu-item-footer">Home</a>
-            <a href="" class="menu-item-footer">Courses</a>
-            <a href="" class="menu-item-footer">Testimonials</a>
+            <a href="" class="menu-item-footer">Inicio</a>
+            <a href="" class="menu-item-footer">Curso</a>
+            <a href="" class="menu-item-footer">Testimonios</a>
          </div>
          <div class="footer-content-container">
             <span class="menu-title">legal</span>
-            <a href="" class="menu-item-footer">Privacy Policy</a>
-            <a href="" class="menu-item-footer">Cookies</a>
-            <a href="" class="menu-item-footer">Legal Advice</a>
+            <a href="" class="menu-item-footer">Politicas de privacidad</a>
+            <a href="" class="menu-item-footer">galletas</a>
+            <a href="" class="menu-item-footer">Legal</a>
          </div>
       </div>
 
       <div class="footer-content-container">
-         <span class="menu-title">follow us</span>
+         <span class="menu-title">siguenos</span>
          <div class="social-container">
             <a href="" class="social-link"></a>
             <a href="" class="social-link"></a>
@@ -158,6 +163,7 @@
       </div>
    </div>
    <div class="copyright-container">
-      <span class="copyright">Copyright 2022, itskrey.com. All rights reserved.</span>
+      <span class="copyright">hecho por gaes 4 2022.</span>
    </div>
+
 </footer>
