--- a/servicios1.html
+++ b/servicios1.html
@@ -89,29 +89,14 @@
                         </div>
                         <h5 class="card-title">CONSULTAR LISTADO DE SOLICITUDES DE SERVICIOS</h5>
                         <div class="display-5">SERVICIOS</div>
-                        <a href="">
+                        <a href="tiposervicio.html">
                             <p class="card-text text-white">haz clic<i class="fa fa-angle-double-right ml-2"
                                     aria-hidden="true"></i></p>
                         </a>
                     </div>
                 </div>
-                <br>
-                <br>
-                <div class="card bg-danger ml-5" style="width: 25rem;">
-                    <div class="card-body">
-                        <div class="card-body-icon">
-
-                        </div>
-                        <h5 class="card-title">CONSULTAR LISTADO DE REPORTES</h5>
-                        <div class="display-5">SERVICIOS</div>
-                        <a href="">
-                            <p class="card-text text-white">haz clic<i class="fa fa-angle-double-right ml-2"
-                                    aria-hidden="true"></i></p>
-                        </a>
-                    </div>
-                </div>
-        </div>
-    </div>
+              
+              
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
