--- a/servicios.html
+++ b/servicios.html
@@ -68,40 +68,40 @@
 <br>
 </html>
 <footer class="footer-con">
-    <div class="footer-container">
-       <div class="footer-content-container">
-          <h3 class="website-logo">VIDRIOS EL SOCIEGO</h3>
-          <div class="andres"><span id="span1">3107726566 - 3192148730</span>
-             <br>
-             <span id="span2">josebottonl@gmail.com</span>
-          </div>
- 
-       </div>
-       <div class="footer-menus">
-          <div class="footer-content-container">
-             <span class="menu-title">menu</span>
-             <a href="" class="menu-item-footer">Home</a>
-             <a href="" class="menu-item-footer">Courses</a>
-             <a href="" class="menu-item-footer">Testimonials</a>
-          </div>
-          <div class="footer-content-container">
-             <span class="menu-title">legal</span>
-             <a href="" class="menu-item-footer">Privacy Policy</a>
-             <a href="" class="menu-item-footer">Cookies</a>
-             <a href="" class="menu-item-footer">Legal Advice</a>
-          </div>
-       </div>
- 
-       <div class="footer-content-container">
-          <span class="menu-title">follow us</span>
-          <div class="social-container">
-             <a href="" class="social-link"></a>
-             <a href="" class="social-link"></a>
-             <a href="" class="social-link"></a>
-          </div>
-       </div>
-    </div>
-    <div class="copyright-container">
-       <span class="copyright">Copyright 2022, itskrey.com. All rights reserved.</span>
-    </div>
- </footer>
+   <div class="footer-container">
+      <div class="footer-content-container">
+         <h3 class="website-logo">VIDRIOS EL SOCIEGO</h3>
+         <div class="andres"><span id="span1">3107726566 - 3192148730</span>
+            <br>
+            <span id="span2">josebottonl@gmail.com</span>
+         </div>
+
+      </div>
+      <div class="footer-menus">
+         <div class="footer-content-container">
+            <span class="menu-title">menu</span>
+            <a href="" class="menu-item-footer">Inicio</a>
+            <a href="" class="menu-item-footer">Curso</a>
+            <a href="" class="menu-item-footer">Testimonios</a>
+         </div>
+         <div class="footer-content-container">
+            <span class="menu-title">legal</span>
+            <a href="" class="menu-item-footer">Politicas de privacidad</a>
+            <a href="" class="menu-item-footer">galletas</a>
+            <a href="" class="menu-item-footer">Legal</a>
+         </div>
+      </div>
+
+      <div class="footer-content-container">
+         <span class="menu-title">siguenos</span>
+         <div class="social-container">
+            <a href="" class="social-link"></a>
+            <a href="" class="social-link"></a>
+            <a href="" class="social-link"></a>
+         </div>
+      </div>
+   </div>
+   <div class="copyright-container">
+      <span class="copyright">hecho por gaes 4 2022.</span>
+   </div>
+</footer>
