--- a/servicios.html
+++ b/servicios.html
@@ -67,41 +67,107 @@
 <br>
 <br>
 </html>
+
+
 <footer class="footer-con">
    <div class="footer-container">
-      <div class="footer-content-container">
-         <h3 class="website-logo">VIDRIOS EL SOCIEGO</h3>
-         <div class="andres"><span id="span1">3107726566 - 3192148730</span>
-            <br>
-            <span id="span2">josebottonl@gmail.com</span>
-         </div>
+       <div class="footer-content-container">
+           <h3 class="website-logo">VIDRIOS EL SOCIEGO</h3>
+           <div class="andres"><span id="span1">3107726566 - 3192148730</span>
+               <br>
+               <span id="span2">josebottonl@gmail.com</span>
+           </div>
 
-      </div>
-      <div class="footer-menus">
-         <div class="footer-content-container">
-            <span class="menu-title">menu</span>
-            <a href="" class="menu-item-footer">Inicio</a>
-            <a href="" class="menu-item-footer">Curso</a>
-            <a href="" class="menu-item-footer">Testimonios</a>
-         </div>
-         <div class="footer-content-container">
-            <span class="menu-title">legal</span>
-            <a href="" class="menu-item-footer">Politicas de privacidad</a>
-            <a href="" class="menu-item-footer">galletas</a>
-            <a href="" class="menu-item-footer">Legal</a>
-         </div>
-      </div>
+       </div>
+       <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="js/sweetalert"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<a href="https://api.whatsapp.com/send?phone=3167034274&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Vidrios%20." class="float" target="_blank">
+<i class="fa fa-whatsapp my-float"></i>
+</a>
+       <div class="footer-menus">
 
-      <div class="footer-content-container">
-         <span class="menu-title">siguenos</span>
-         <div class="social-container">
-            <a href="" class="social-link"></a>
-            <a href="" class="social-link"></a>
-            <a href="" class="social-link"></a>
-         </div>
-      </div>
+           <div class="footer-content-container">
+               <span class="menu-title">menu</span>
+               <a href="" class="menu-item-footer">Inicio</a>
+               <a href="" class="menu-item-footer">Curso</a>
+               <a href="" class="menu-item-footer">Testimonios</a>
+
+
+           </div>
+           <div class="footer-content-container">
+               <span class="menu-title">legal</span>
+               <a href="" class="menu-item-footer">Politicas de privacidad</a>
+               <a href="" class="menu-item-footer">galletas</a>
+               <a href="" class="menu-item-footer">Legal</a>
+           </div>
+       </div>
+       <div class="footer-content-container">
+           <span class="menu-title">siguenos</span>
+
+       </div>
+       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+       <script src="https://kit.fontawesome.com/521fdbf9ff.js" crossorigin="anonymous"></script>
+       <div class="contact-info">
+           <ul>
+               <li><a href="" class="fa-brands fa-facebook"></i> </a> <br>Facebook</li>
+               <li><a href="https://api.whatsapp.com/send?phone=3142999671&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Vidrios%20."
+                       class="fa-brands fa-whatsapp"></i> </a><br>WhatsApp</li>
+               <li><a href="" class="fa-brands fa-instagram"></i> </a><br>Instagram</li>
+
+           </ul>
+       </div>
    </div>
    <div class="copyright-container">
-      <span class="copyright">hecho por gaes 4 2022.</span>
+       <span class="copyright">hecho por gaes 5 2023.</span>
    </div>
 </footer>
+<!-- FOOTER TOP -->
+
+
+
+</iframe></div>
+</aside>
+</div>
+</div>
+</div>
+</div>
+<div class="row">
+   <div class="col-md-12 footer-row-2">
+       <div class="row"></div>
+   </div>
+</div>
+<div class="row">
+   <div class="col-md-12 footer-row-3">
+       <div class="row">
+           <div class="col-md-12 sidebar-1">
+               <aside id="custom_html-8" class="widget_text widget vc_column_vc_container widget_custom_html">
+                   <div class="textwidget custom-html-widget"><small>En cumplimiento del Régimen General de Habeas
+                           Data, regulado por la Ley 1581 de 2012 y sus Decretos reglamentarios; la sociedad
+                           identificada con NIT. 79431892 y dirección electrónica
+                           https://senauti.github.io/paginacompleta1/index.htmlcomo empresa que almacena y recolecta
+                           datos de carácter personal, y en calidad de RESPONSABLE, debe informarle lo siguiente:Los
+                           datos personales solicitados durante la navegación en la página web de VIDRIERIA EL SOSIEGO
+                           SAS serán tratados de acuerdo a las finalidades relacionadas con el objeto social de la
+                           Compañía y en especial para responder a las inquietudes allegadas a través de este canal; y
+                           remitir información que se considere de interés a través de boletines electrónicos. Los
+                           datos personales y de contacto solicitados serán conservados en la base de datos de la
+                           sociedad mientras se conserve una relación de tipo contractual o legal con el accionista o
+                           interesado titular de la información, y en todo caso por un periodo máximo de veinte (20)
+                           años una vez finalizada tal relación con el único fin de atender solicitudes de autoridades
+                           y/o fines estadísticos. Como titular de la información, tiene los derechos a conocer,
+                           actualizar, y rectificar sus datos personales; solicitar la revocación de la autorización
+                           y/o solicitar la supresión del dato cuando en el tratamiento realizado no se respeten los
+                           principios, derechos y garantías constitucionales y legales; y acceder en forma gratuita a
+                           sus datos personales objeto de Tratamiento. En caso de querer presentar Consultas, Quejas o
+                           Reclamos puede realizar la solicitud al siguiente correo electrónico anbotton11099@gmail.com
+                           o de forma presencial en las siguiente dirección: Calle 76 #14b 02 sur de la ciudad de
+                           Bogotá. aquí.</a></small></div>
+               </aside>
+           </div>
+       </div>
+   </div>
+</div>
+</div>
+</div>
